# agente-teste-eduardo

./: .env.example  .gitignore  .nixpacksrc  DEPLOY_COMPLETO.md  DEPLOY_RAILWAY.md  Dockerfile  GUIA_CLIENTE_FHE.md  LICENSE  Makefile  Procfile  RAILWAY_ENV_VARS.txt  README.md  langgraph.json  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh  test_agente.py
.claude/: settings.local.json
docs/: ADDING_AGENTS.md  ARCHITECTURE.md  DATABASE.md  DEPLOY.md  GETTING_STARTED.md
src/whatsapp_langchain/agents/catalog/assistant/: __init__.py  agent.py  graph.py  prompts.py
src/whatsapp_langchain/agents/catalog/fhe_assistant/: __init__.py  agent.py  graph.py  prompts.py  tools.py
src/whatsapp_langchain/agents/catalog/rhawk_assistant/: agent.py  graph.py  prompts.py
src/whatsapp_langchain/agents/middleware/: context.py  summarize.py  trim.py
src/whatsapp_langchain/agents/tools/: memory.py
src/whatsapp_langchain/server/: __init__.py  main.py
src/whatsapp_langchain/server/routes/: admin.py  webhook.py  webhook_uazapi.py
src/whatsapp_langchain/shared/: __init__.py  config.py  db.py  messaging.py  queue.py  uazapi.py
src/whatsapp_langchain/worker/: __init__.py  main.py  media.py  processor.py
tests/: conftest.py
tests/integration/: __init__.py  helpers.py  test_context_middleware.py  test_docker_demo_features.py  test_memory.py  test_realistic_flows.py  test_webhook.py
tests/unit/: test_memory_flag.py  test_memory_tool.py
