[project]
name = "whatsapp-langchain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.8",
    "langgraph==1.0.7",
    "langchain-openai==1.1.7",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]==0.4.12",
    "ruff==0.9.6",
    "pyright==1.1.408",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
